implement file-based module values
